# ML-Production-Practice

./: README.md  pyproject.toml
.github/workflows/: manual.yml
ML Model Deployment/: Makefile  pyproject.toml
ML Model Deployment/.github/workflows/: manual.yml
ML Model Deployment/inference_service/app/: run.py
ML Model Deployment/inference_service/app/api/: prediction.py
ML Model Deployment/inference_service/app/config/: .env  config.py
ML Model Deployment/inference_service/app/model/: rf_v2
ML Model Deployment/inference_service/app/schema/: apartment.py
ML Model Deployment/inference_service/app/services/: model_inference.py
ML Model Deployment/src/: runner.py  runner_builder.py  runner_inference.py
ML Model Deployment/src/.github/workflows/: workflow.yml
ML Model Deployment/src/config/: .env  config.py
ML Model Deployment/src/model/: model_builder.py  model_inference.py  model_service.py
ML Model Deployment/src/model/pipelines/: collection.py  model.py  preparation.py
