[tool.poetry]
name = "ml"
version = "0.1.0"
description = ""
authors = ["rcao70 <rcao70@gatech.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.7"
scikit-learn = "^1.3.1"
pandas = "^2.1.1"
pydantic-settings = "^2.0.3"
pydantic = "^2.10.3"
loguru = "^0.7.3"
flake8 = "^7.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
